--- a/src/Probably/Probably.fsproj
+++ b/src/Probably/Probably.fsproj
@@ -5,7 +5,7 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <!--  Generate package everytime we run dotnet build  -->
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        
+
         <PackageId>ElsaHealth.Probably</PackageId>
         <Version>0.0.1</Version>
         <Authors>Elsa Health</Authors>
@@ -16,21 +16,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Domain/Continuous.fs" />
-        <Compile Include="Domain/Discrete.fs" />
-        <Compile Include="Domain/Distributions.fs" />
-        <Compile Include="Library.fs" />
+        <Compile Include="Utils.fs" />
+        <Compile Include="Distributions/Continuous.fs" />
+        <Compile Include="Distributions/Discrete.fs" />
+        <Compile Include="Distributions/Core.fs" />
     </ItemGroup>
-
-    <!-- Add source files to "fable" folder in Nuget package -->
-<!--    <ItemGroup>-->
-<!--        <Content Include="*.fsproj; **/*.fs; **/*.fsi" PackagePath="fable/"/>-->
-<!--    </ItemGroup>-->
 
     <!-- Add source files to "fable" folder in Nuget package -->
     <ItemGroup>
         <Content Include="*.fsproj; **\*.fs; **\*.fsi" PackagePath="fable\" />
-        <Content Include="secrets.txt" />
     </ItemGroup>
 
 </Project>
